Added auto play to the slide function. And also restructured the slide function to account for the slide width  for desktop; and mobile versions

--- a/index.htm
+++ b/index.htm
@@ -412,8 +412,8 @@
                     <button class="w-fit md:w-auto bg-[#212121] text-white text-sm text-black px-4 py-2 rounded-sm font-medium cursor-pointer mt-12">&#43; Your Opinions</button>
                 </div>
 
-                <div class="mt-12 lg:mt-20 lg:grid lg:grid-cols-[435px_1fr] lg:gap-[92px] items-center overflow-hidden [mask-image:linear-gradient(to_left,transparent_0%,black_15%,black_100%)] 
-                [-webkit-mask-image:linear-gradient(to_left,transparent_0%,black_15%,black_100%)]">
+                <div class="mt-12 lg:mt-20 lg:grid lg:grid-cols-[435px_1fr] lg:gap-[92px] items-center overflow-hidden lg:[mask-image:linear-gradient(to_left,transparent_0%,black_15%,black_100%)] 
+                lg:[-webkit-mask-image:linear-gradient(to_left,transparent_0%,black_15%,black_100%)]">
                     <!-- User Image Wrapper -->
                     <div class="flex-none space-x-5 space-y-5 text-center lg:text-left py-4.5">
                         <span class="w-[100px] h-[100px] sm:w-[160px] sm:h-[160px] rounded-full inline-block overflow-hidden max-lg:-translate-x-10"><img src="./images/user-1.jpeg" alt="Profile Pic"></span>
@@ -426,7 +426,7 @@
                     </div>
 
                     <!-- Review Text Content and Slides -->
-                    <div class="px-6 lg:mt-13 next overflow-hidden" id="review_slides"> <!-- Remove border class -->
+                    <div class="px-5 lg:mt-13 overflow-hidden" id="review_slides"> <!-- Remove border class -->
                         <!-- Review Slide Wrapper -->
                         <div id="slide_track" class="py-5 flex gap-6 relative">
                             <!-- First Review Slide -->
